# ay-alfred-homeassistant

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: REVIEW.md  copilot-instructions.md  release.yml
.github/workflows/: ci.yml  claude-interactive.yml  claude-review.yml  release.yml
scripts/: QA_CHEATSHEET.md  build.sh  build_colors.py  dev-install.sh  generate_icons.py  qa_smoke_test.py
specs/: spec-000-init.md
specs/project-tracking/: README.md  changelog.md  phase-0-foundation.md  phase-1-config-ha-client.md  phase-1.5-enhanced-search.md  phase-1.6-preferred-label.md  phase-2-cache-search.md  phase-3-actions.md  phase-4-polish.md  phase-5-websocket.md  status.md
src/ha_workflow/: __init__.py  actions.py  alfred.py  cache.py  cli.py  colors.py  config.py  entities.py  errors.py  ha_client.py  inference.py  notify.py  params.py  query_parser.py  quick_exec.py  search.py  suggestions.py  usage.py
src/ha_workflow/scripts/: __init__.py  action_runner.py  actions_filter.py  copy_entity.py  open_in_ha.py  params_filter.py  search_filter.py
tests/: conftest.py  test_actions.py  test_alfred.py  test_alfred_integration.py  test_cache.py  test_cli.py  test_colors.py  test_config.py  test_entities.py  test_errors.py  test_ha_client.py  test_inference.py  test_notify.py  test_params.py  test_query_parser.py  test_search.py  test_suggestions.py  test_usage.py  test_version.py
workflow/: info.plist
