[project]
name = "ay-alfred-homeassistant"
version = "0.1.0"
description = "Alfred 5 workflow for Home Assistant integration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "AYapejian" }]

[project.optional-dependencies]
dev = [
  "ruff>=0.9",
  "mypy>=1.14",
  "pytest>=8.0",
  "cairosvg>=2.8.2",
  "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_workflow", "packages/ha_lib"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "packages", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "UP007",   # Union[X, Y] -> X | Y — keep Union/Optional for 3.9 compat (no X|Y union syntax)
  "UP045",   # Optional[X] -> X | None — same reason
  "SIM112",  # Alfred passes lowercase env vars (entity_id, action, domain, params)
]

[tool.ruff.lint.isort]
known-first-party = ["ha_workflow", "ha_lib"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src:packages"
packages = ["ha_workflow", "ha_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests requiring a real Home Assistant instance",
]
